--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.2.10'
 	implementation("com.google.guava:guava:24.0-jre")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 }
 
 tasks.named('test') {
