--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/urlshortener
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#spring.jpa.hibernate.ddl-auto=update
 
 get.request.path=/shorten
+spring.profiles.active=prod
